fixed bottom position for downloads box on small screens

--- a/app/assets/stylesheets/partials/item-page.scss
+++ b/app/assets/stylesheets/partials/item-page.scss
@@ -262,7 +262,15 @@
 /* sidebar */
 
 .show-tools {
+  border: 0;
+  border-radius: 0;
+  border-top: 3px solid $gray-lighter;
+  bottom: 0;
   box-shadow: none;
+  margin: 0;
+  margin-left: -15px;
+  position: fixed;
+  width: 100%;
 
   & ul {
     margin: 0;
@@ -273,16 +281,19 @@
     list-style: none;
   }
 
+  & .panel-body {
+    padding: 10px;
+  }
 
-
-  & .download-button {
-    margin: 0 0 12px 0;
-    width: 100%;
+  & .download-box {
+    display: flex;
   }
 
   & .permanent-link {
     align-items: center;
     display: flex;
+    margin-left: 10px;
+    width: 100%;
   }
 
   & .permanent-link h4,
@@ -320,11 +331,39 @@
   }
 
   & .social-buttons {
-    padding-top: 20px;
+    display: none;
   }
 }
 
-@media screen and (min-width: $screen-md ) {
+@media screen and (min-width: $screen-sm ) {
 
+  .show-tools {
+    border: 0;
+    border-radius: 3px;
+    border: 1px solid $gray-lighter;
+    bottom: auto;
+    box-shadow: none;
+    margin: 0;
+    margin-left: inherit;
+    position: relative;
+    width: auto;
 
+    & .download-box {
+      display: block;
+    }
+
+    & .download-button {
+      margin: 0 0 12px 0;
+      width: 100%;
+    }
+
+    & .permanent-link {
+      margin: 0;
+    }
+
+    & .social-buttons {
+      display: block;
+      padding-top: 20px;
+    }
+  }
 }
